[tool.poetry]
name = "provjupyter"
version = "0.1.0"
description = ""
authors = ["adamdavis2 <adam.davis@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
